Ajout du script à ne pas supprimer
Semble fonctionner sans, mais prudence est mère de sûreté

--- a/HUBert.html
+++ b/HUBert.html
@@ -23,6 +23,7 @@
 <script src="jquery-ui-1.12.1/1.11.1_jquery-ui.min.js"></script>
 <script src="jquery-ui-1.12.1/jquery.ui.dialog-clickoutside.js"></script> -->
 <!-- Sans ce script, dialog ne fonctionnera pas : <script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>-->
+<script src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
 <script src="coreFiles/HUBert.js"></script>
 <script src="coreFiles/biblionumber.json.js"></script>
 <script src="coreFiles/random_book.js"></script>
