Update and rename HUBert.html to index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <ul class="listeNonNum">
 <!-- Liste des services -->
 	<li class="liLink"><i></i><a href="https://www.archires.archi.fr/" target="_blank"><img class="imgListeCarre" src="images/logo_archires.jpg">, catalogue de la bibliothèque et du réseau des ENSA/P</a></li>
-	<li class="liLink"><i></i><a href="../Louise 1.1/Louise.html" target="_blank">Louise, plan pour trouver vos documents dans la médiathèque</a></li>
+	<li class="liLink"><i></i><a href="https://alban-peyrat.github.io/Louise" target="_blank">Louise, plan pour trouver vos documents dans la médiathèque</a></li>
 	<li class="liLink new" id="randomBook"><i></i><a>Découvrez un document aléatoire !</a></li>
 	<li class="liLink"><i></i><a href="http://www.bordeaux.archi.fr/ecole/ressources/mediatheque/atlas-numerique.html" target="_blank">Atlas numérique situant les travaux d'étudiants et d'enseignants de l'école</a></li>
 	<li class="liLink"><i></i><a href="https://www.sudouest.fr/" target="_blank">Sud Ouest accès premium</a></li>
